java/ql/test/library-tests/qlengine/selectAtType.expected
ERROR: class or primitive expected in query (selectAtType.ql:5,8-15)
