java/ql/test/library-tests/qlengine/selectAtType.ql
import java

@class clasz() { any() }

select clasz()
